--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 		<div id='status-notice' class='godot' style='display: none;'></div>
 	</div>
 
-	<script type='text/javascript' src='Untitled Catgirl Game.js?asdd'></script>
+	<script type='text/javascript' src='Untitled Catgirl Game.js?asddddd'></script>
 	<script type='text/javascript'>//<![CDATA[
 
 		var engine = new Engine;
